added 2 basic user auth endpoints and swagger docs
